--- a/src/roboticscpp/CMakeLists.txt
+++ b/src/roboticscpp/CMakeLists.txt
@@ -37,7 +37,7 @@ find_package(image_transport REQUIRED)
 # find_package(<dependency> REQUIRED)
 
 # OpenCV
-find_package(OpenCV REQUIRED)
+find_package(OpenCV 4 REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 # Eigen3
